<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="#FFC107"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/Intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="20sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/ShiftButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yosh"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        app:srcCompat="@drawable/ic_baseline_maps_home_work_24"
        android:contentDescription="@string/logo_de_la_maison"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="311dp"
        app:srcCompat="@drawable/logo_sedr_blanc_signature"
        android:contentDescription="@string/logo_de_saint_etienne_du_rouvray"/>


</LinearLayout>